# jungle-for-tomorrow

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  slack-test-touch
app/: __init__.py  main.py
app/controller/: admin_controller.py  main_controller.py  my_list_controller.py  recommended_items_controller.py  user_controller.py
app/core/: auth.py  database.py  extension.py
core/: auth.py
templates/: header.html  index.html  layout.html  layout.j2  login.html  register.html  registerResult.html  test.j2
templates/admin/: items.html  layout.html
templates/my_item/: my_item.html
templates/recommended_items/: items copy.j2  items.j2
templates/user/: user_info.j2
