[tool.poetry]
name = "jungle-for-tomorrow-fork"
version = "0.1.0"
description = ""
authors = ["GoWoong <popgun10@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-jwt-extended = "^4.7.1"
pymongo = "^4.11.2"
passlib = "^1.7.4"
jinja2 = "^3.1.6"
bcrypt = "^4.3.0"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
